templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: srl-probes
  name: srl-probes
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: srl-probes
  type: ClusterIP
