templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: srl-probes
  name: srl-probes
spec:
  rules:
  - host: hello.example.com
    http:
      paths:
      - backend:
          service:
            name: srl-probes
            port:
              number: 8080
        path: /
        pathType: Prefix
